Wrap method return values in Result opt

--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "stdmodel",
-  "version": "1.0.0",
-  "description": "Make model classes emit events",
+  "version": "2.0.0",
+  "description": "Turn model classes into emitters",
   "main": "index.js",
   "scripts": {
     "test": "tape test.js && standard"
+  },
+  "dependencies": {
+    "stdopt": "^9.0.0"
   },
   "devDependencies": {
     "standard": "^14.3.1",
